# Datum_Labs

./: Readme  githubapi.py  students_grades.csv
DLT Tasks/: clickup_api.py  requirements.txt
DLT Tasks  Dagster/: clickup_api.py  rest_api_pipeline.py
Dagster/github_sources/: README.md  pyproject.toml  setup.cfg  setup.py
Dagster/github_sources/.dlt/: secrets.toml
Dagster/github_sources/github_sources/: assets.py  definitions.py  github_pipeline.py
Dagster/github_sources/github_sources.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Day 1/: Sum_of_Whol.py  SwapNumber.py  conversion.py  data.json  dict.py  list.py
Day 1 /: Prime_Number.py  README.md  class.py  conversion.py  csv_pratice.py  json_write.py  people.csv  people.json
Day 2/: Cleaning_and_Sorting.py  Logging.py  Pandas_Cleaning.py  cleaned_HR_data.csv  cleaned_file.csv  cleaned_file2.csv  cleaned_file3.csv  erro_handling.py  logging_primenumber.py  messy-data.csv
Day 3/: Data.json  Haelthcare_data_cleaned.csv  complete_script.py  converson2.py  my.txt  people.csv
Day 4/: Banking_system.py  Student_Gradebook_System.py  csv_to_snowflake.py  data.csv  merged.py  merged_output.csv  movie_recomendation.py  students_grades.csv  weather_app.py
Day 6/: connection.py  requirements.txt  sql_database_pipeline.py
Project Clickup/: Clickup_api.py  requirements.txt
Project Postgres/: last_modified.txt  postgres_incremental.py  sql_database_pipeline.py  sql_test.py  temp.db
Tasks/: Data.csv  Data.json  Max_Min.py  balanced.py  couting_charcters.py  flatten.py  json_to_csv.py  non_repeating.py  (+2 more)
(+25 files in other folders)
